<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IR Street View</string>
    <string name="main_app_name">IR Street View</string>
    <string name="gallery_app_name">IR Gallery</string>
    <string name="connect_warning">Please Connect FLIR One</string>
    <string name="change_view">Change View \u21EA</string>
    <string name="change_view_retract">Change View \u21B2</string>
    <string name="connectSim">Toggle Sim</string>
    <string name="performTuning">Tune</string>
    <string name="rotate_on">\u21BA</string>
    <string name="rotate_off">\u21BB</string>
    <string name="battery_label">Batt:</string>
    <string name="txtTuning">Tuning&#8230;</string>
    <string name="startNetStream">Stream</string>
    <string name="stopNetStream">Disconnect</string>
    <string name="cable_desc">Cable</string>
    <string name="no_charge">--</string>
    <string name="camera_icon_desc">Click to take a picture</string>
    <string name="charging_icon_desc">A battery charging indicator</string>
    <string name="live_footage_desc">Live camera footage</string>
    <string name="gallery_desc">View the photo gallery</string>
    <string name="fullscreen_image_desc">A fullscreen image</string>
    <string name="small_image_desc">A thumbnail in the gallery</string>
    <string name="camera_reticle_desc">The Spot Meter</string>

    <!-- Toolbar Menu Options -->
    <string name="menu_close">Close Window</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_info">App Information</string>
    <string name="menu_add">Import Image</string>
    <string name="menu_edit">Edit Image</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_delete">Delete Image</string>
</resources>
