<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/camera_preview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:orientation="vertical"
    tools:context=".activity.PreviewActivity"
    android:keepScreenOn="true"
    android:touchscreenBlocksFocus="false">

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal|top"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:scaleType="fitCenter"
        android:contentDescription="@string/live_footage_desc" />
    <FrameLayout
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">
        <LinearLayout
            android:id="@+id/fullscreen_content_controls_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent"
            android:background="@color/black_overlay"
            style="@android:style/ButtonBar">
            <TextView
                android:id="@+id/batteryLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/battery_label"
                android:layout_margin="8dp"
                android:layout_weight="0"
                android:layout_gravity="start|center_vertical"
                style="?actionMenuTextAppearance" />
            <ImageView
                android:id="@+id/batteryChargeIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_weight="0"
                android:src="@drawable/ic_lock_idle_charging"
                android:tint="@color/deep_teal_500"
                android:visibility="gone"
                android:contentDescription="@string/charging_icon_desc" />
            <TextView
                android:id="@+id/batteryLevelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="0.48"
                android:layout_gravity="start|center_vertical"
                android:text="@string/no_charge" />
            <ToggleButton
                android:id="@+id/chargeCableToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cable_desc"
                android:layout_weight="0.10"
                android:checked="false"
                android:visibility="invisible"
                android:onClick="onSimulatedChargeCableToggleClicked" />
            <ToggleButton
                android:id="@+id/streamButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/startNetStream"
                android:textOn="@string/stopNetStream"
                android:onClick="onNetStreamClicked"
                style="?metaButtonBarButtonStyle"/>
            <Button
                android:id="@+id/tuneButton"
                android:layout_width="51dp"
                android:layout_height="wrap_content"
                android:text="@string/performTuning"
                android:onClick="onTuneClicked"
                style="?metaButtonBarButtonStyle"/>
            <ToggleButton
                android:id="@+id/switch_rotate"
                android:layout_width="47dp"
                android:layout_height="wrap_content"
                android:text="@string/rotate_on"
                android:onClick="onRotateClicked"
                android:layout_gravity="end"
                android:textOff="@string/rotate_off"
                android:textOn="@string/rotate_on"
                style="?metaButtonBarButtonStyle" />
        </LinearLayout>
        <FrameLayout
            android:id="@+id/fullscreen_content_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            tools:ignore="UselessParent"
            android:columnCount="3"
            android:rowCount="2"
            style="?metaButtonBarStyle">
            <LinearLayout
                android:id="@+id/imageTypeListContainer"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:baselineAligned="false"
                android:focusableInTouchMode="false"
                android:visibility="gone">
                <ListView
                    android:id="@+id/imageTypeListView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|bottom|start"
                    android:layout_marginBottom="60dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:alpha="0.9"
                    android:layout_weight="0.25"
                    android:choiceMode="singleChoice"
                    android:clickable="true"
                    android:dividerHeight="0dp" />
                <ListView
                    android:id="@+id/paletteListView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="60dp"
                    android:alpha="0.9"
                    android:layout_gravity="bottom|end"
                    android:layout_weight="0.75"
                    android:choiceMode="singleChoice"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:clickable="true"
                    android:dividerHeight="0dp" />
            </LinearLayout>
            <ImageButton
                android:id="@+id/galleryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:contentDescription="@string/gallery_desc"
                android:onClick="onOpenGalleryClicked"
                android:src="@drawable/gallery"
                android:adjustViewBounds="true"
                android:maxWidth="52dp"
                android:maxHeight="52dp"
                android:scaleType="fitCenter"
                style="?metaButtonBarButtonStyle"/>
            <Button
                android:id="@+id/connect_sim_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connectSim"
                android:onClick="onConnectSimClicked"
                android:layout_marginStart="60dp"
                android:layout_gravity="bottom"
                style="?metaButtonBarButtonStyle"/>
            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:contentDescription="@string/camera_icon_desc"
                android:onClick="onCaptureImageClicked"
                android:src="@drawable/camera"
                android:adjustViewBounds="true"
                android:maxWidth="52dp"
                android:maxHeight="52dp"
                android:scaleType="fitCenter"
                style="?metaButtonBarButtonStyle"/>
            <ToggleButton
                android:id="@+id/change_view_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_gravity="bottom|end|center_horizontal"
                android:onClick="onChangeViewClicked"
                android:textOff="@string/change_view"
                android:textOn="@string/change_view_retract" />
        </FrameLayout>
        <ProgressBar
            android:id="@+id/tuningProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            style="?android:attr/progressBarStyle"/>
        <TextView
            android:id="@+id/tuningTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txtTuning"
            android:labelFor="@id/tuningProgressBar"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:visibility="gone" />
        <TextView
            android:id="@+id/pleaseConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/connect_warning"
            android:layout_gravity="center"
            android:layout_marginBottom="90dp"
            android:visibility="gone" />
    </FrameLayout>
    <ImageView
        android:id="@+id/spotMeterIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:maxWidth="32dp"
        android:maxHeight="32dp"
        android:scaleType="fitCenter"
        android:src="@drawable/spot_meter"
        android:alpha="0.9"
        android:contentDescription="@string/camera_reticle_desc" />
    <TextView
        android:id="@+id/spotMeterValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_gravity="center"
        android:alpha="0.9"
        android:paddingTop="39dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="3" />
</FrameLayout>
